--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.0"
+  },
+  "devDependencies": {
+    "standard": "^14.3.1"
   }
 }
